changed .css enlarged photo now store3.jpg

--- a/esp.css
+++ b/esp.css
@@ -1,6 +1,6 @@
 body { background-color: #cc3300; 
      font-family: Verdana, Arial, sans-serif;
-     background-image: url(images/store.jpg);
+     background-image: url(images/store3.jpg);
 //2, 6b, 8b, 4 and 990000, cc3300, 993300, ff6633, da3f01, be3700, b63200, ae2d00//
 }
 p {color: #ff9900;
