--- a/esp.css
+++ b/esp.css
@@ -38,10 +38,13 @@ h4 { background-repeat: no repeat;
     text-align: center;
     border-radius: 5px 5px 5px 5px;
 }
-
-li { color: #ff9900;
+li { text-align: center;
+color: #ff9900;
 }
-
+ul { text-align: center;
+list-style-position: inside;
+color: #ff9900;
+}
 .content { margin-left: auto;
           margin-right: auto;
           width:  60%;
